--- a/css/theme-blue.css
+++ b/css/theme-blue.css
@@ -103,11 +103,19 @@ div.sidebarTitle {
 }
 
 li.sidebarTitle {
-    margin-top:40px;
+  margin-top:20px;
     font-weight:normal;
     font-size:130%;
     color: #ED1951;
     margin-bottom:10px;
     margin-left: 5px;
 
+}
+
+.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+    background-color: #015CAE;
+}
+
+.navbar-inverse .navbar-toggle {
+    border-color: #015CAE;
 }
